<resources>
    <string name="app_name">Irish Railway</string>
    <string name="hello_world">Jesus loves you</string>
    <string name="enter_station_name">enter station name</string>

    <string name="category_stations">stations</string>
    <string name="category_trains">trains</string>
    <string name="navigation_item_list">list</string>
    <string name="trains_map">Trains on map</string>
    <string name="navigation_item_other">other</string>
    <string name="navigation_item_search">search</string>
    <string name="navigation_item_settings">settings</string>
    <string name="navigation_item_about">about</string>
    <string name="navigation_item_info">info</string>
    <string name="drawer_header_info">HEADER INFO</string>
    <string name="test_drawer_main_text">test drawer main text</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="close_drawer">Navigation View</string>
    <string name="open_drawer">Navigation View Closed</string>
    <string name="toast_crash">ACRA crash report is sending</string>
    <string name="btn_bada_bum">Bada bum</string>
    <string name="crash_dialog_title">Sensi App crash</string>
    <string name="crash_dialog_text">An unexpected error occurred forcing the application to
        stop. Would you like to send the details to help fix the issue?</string>
    <string name="crash_dialog_comment_prompt">You can add extra information and comments here:</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>

    <string name="menu_night_mode">Night mode</string>
    <string name="menu_night_mode_system">Follow system</string>
    <string name="menu_night_mode_day">Day (always)</string>
    <string name="menu_night_mode_night">Night (always)</string>
    <string name="menu_night_mode_auto">Auto</string>
    <string name="enter_train_name">enter train route</string>
    <string name="news">Rail News</string>
    <string name="stations_list">Stations list</string>
    <string name="stations_map">Stations map</string>
    <string name="fav">Fav</string>
    <string name="about">About</string>
    <string name="help">Help</string>
    <string name="eire_rail_app">Irish Rail App</string>

    <string name="info_news_see_more"> - click to see more</string>

    <string name="help_about">
        <![CDATA[

         <br>
         © 2017
         <br><br>
         View real time train information and timetables. Shows the position of railway stations and trains.
         <br>
         It is a demo app and does not have special functionality - is just an example of using fragments and is optimized for tablet as well.
         Real time and locations data come from Irish Rail Realtime API.
         <br>
         In case of crash or other failure please email me or use crash report. App will be updated with new features.
         <br><br>
         <a href="mailto:developer.walicki@gmail.com">developer.walicki@gmail.com</a>
         <br><br>
         Me on Twitter: <a href="https://twitter.com/kudlatyIE">@kudlatyIE</a>
         <br><br>
         nad G+ <a href="google.com/+NikodemW">NikodemW</a>
         <br><br>
         Cheers,
         <br><br>
         Nikodem Walicki
         ]]>
    </string>
    <string name="general_info_not_available">General info not available</string>
    <string name="parking_and_transport_info_not_available">Parking and transport info not available</string>
    <string name="accessibility_info_not_available">Accessibility info not available</string>
    <string name="fav_stations">Fav stations</string>
    <string name="all_stations">All stations</string>
    <string name="gps_network_not_enabled">
         Location on phone is DISABLED
        \nDistances to objects can be calculated incorrectly.
        \nPlease go to settings and turn ON location service.
        </string>
    <string name="open_location_settings">open location settings</string>

</resources>
